# rl-agent

./: .dockerignore  .dockerignore.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE_CONTEXT.md  Dockerfile  README.md  benchmark_report.py  benchmark_runner.py  client.py  gym_wrapper.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
reports/: leaderboard.csv  replay_buffer.jsonl  summary.txt
reports/baseline_report/: README.txt  results.json
reports/baseline_report/inference_logs/: inference_nemotron_nano.txt  inference_nemotron_super49b.txt
reports/baseline_report/test_logs/: smoke_test_results.txt
reports/inference_logs/: inference_mistral_nemotron.txt  inference_nemotron3_120b.txt  inference_nemotron3_nano30b.txt  inference_nemotron51b.txt  inference_nemotron_mini4b.txt  inference_nemotron_nano8b.txt  inference_nvidia_8b.txt
reports/test_logs/: pytest_results.txt  test_results.txt
scheme_env/: Dockerfile  README.md  __init__.py  benchmark_runner.py  client.py  inference.py  leaderboard_20260404_002849.csv  models.py  openenv.yaml  pyproject.toml
scheme_env/server/: __init__.py  app.py  requirements.txt  scheme_env_environment.py
scripts/: pre-validation-script.sh  validate-submission.sh
server/: app.py  requirements.txt  reward_system_updates.md  scheme_env_environment.py  schemes.py
tests/: conftest.py  test_environment.py  test_scheme_eligibility.py
